# ROS2_Essentials

./: README.md
multi_robot_cpp_services_pkg/: CMakeLists.txt  package.xml
multi_robot_cpp_services_pkg/src/: phone_number_belongs_to_service_client.cpp  phone_number_belongs_to_service_server.cpp
multi_robot_cpp_topics_pkg/: CMakeLists.txt  package.xml
multi_robot_cpp_topics_pkg/config/: config.yaml
multi_robot_cpp_topics_pkg/launch/: multi_robot_cpp_topics_launch.py
multi_robot_cpp_topics_pkg/src/: multi_robot_publisher.cpp  multi_robot_subscriber.cpp
multi_robot_interfaces_pkg/: CMakeLists.txt  package.xml
multi_robot_interfaces_pkg/srv/: PhoneNumberBelongsToService.srv
multi_robot_py_services_pkg/: package.xml  setup.cfg  setup.py
multi_robot_py_services_pkg/multi_robot_py_services_pkg/: multi_robot_py_services_client.py  multi_robot_py_services_server.py
multi_robot_py_topics_pkg/: package.xml  setup.cfg  setup.py
multi_robot_py_topics_pkg/multi_robot_py_topics_pkg/: multi_robot_publisher.py  multi_robot_subscriber.py
