<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_py_services_pkg</name>
  <version>0.0.0</version>
  <description>Package for Python based Service</description>
  <maintainer email="teju81@gmail.com">raviteja</maintainer>
  <license>Apache-2.0</license>



  <exec_depend>rclpy</exec_depend>
  <exec_depend>multi_robot_interfaces_pkg</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
